cluster/prometheus/ship/base/prometheus/service.yaml
---
# Source: prometheus-operator/templates/prometheus/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator-prometheus
  namespace: monitoring
  labels:
    app: prometheus-operator-prometheus
    self-monitor: "true"
    
    chart: prometheus-operator-8.8.0
    release: "prometheus-operator"
    heritage: "Tiller"
spec:
  ports:
  - name: web
    port: 9090
    targetPort: 9090
  selector:
    app: prometheus
    prometheus: prometheus-operator-prometheus
  type: "ClusterIP"
